src/core-crm/objects/Opportunity_Outcome__c/Opportunity_Outcome__c.object-meta.xml
<CustomObject>
    <description>Opportunity Outcome captures the outcome of a given Opportunity. Each Opportunity can have many Opportunity Outcomes.</description>
    <label>Opportunity Outcome</label>
    <nameField>
        <displayFormat>OO-{00000}</displayFormat>
        <label>Opportunity Outcome Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Outcomes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>