src/core-crm/objects/Opportunity_Outcome__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The amount of revenue expected to be generated by the Project.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>