src/core-crm/objects/Opportunity_Outcome__c/fields/ASIC_Registration_Key__c.field-meta.xml
<CustomField>
    <fullName>ASIC_Registration_Key__c</fullName>
    <description>The ASIC Registration Key.</description>
    <label>ASIC Registration Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>