src/core-crm/objects/Opportunity_Outcome__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>A unique, business formatted code to identify a Project being managed under an Opportunity Outcome.</description>
    <label>Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>