src/core-crm/objects/Opportunity_Outcome__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>The name of the Start-Up Company.</description>
    <inlineHelpText>The name of the Startup Company.</inlineHelpText>
    <label>Company Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>