src/core-crm/objects/Opportunity_Outcome__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <description>A short description for the Corporate Partnership Component Type.</description>
    <inlineHelpText>A short description for the Corporate Partnership Component Type.</inlineHelpText>
    <label>Component Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>