src/core-crm/objects/Opportunity_Outcome__c/fields/Decommissioned_Date__c.field-meta.xml
<CustomField>
    <fullName>Decommissioned_Date__c</fullName>
    <description>The date the project is/was decommissioned.</description>
    <label>Decommissioned Date</label>
    <type>Date</type>
</CustomField>