src/core-crm/objects/Opportunity_Outcome__c/fields/Decommissioned_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decommissioned_Reason__c</fullName>
    <description>The business entered reason why the project was decommissioned.</description>
    <inlineHelpText>The business entered reason why the project was decommissioned.</inlineHelpText>
    <label>Decommissioned Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>