src/core-crm/objects/Opportunity_Outcome__c/fields/Deregistration_Date__c.field-meta.xml
<CustomField>
    <fullName>Deregistration_Date__c</fullName>
    <description>The date the Start-Up Company was de-registered.</description>
    <label>Deregistration Date</label>
    <type>Date</type>
</CustomField>