src/core-crm/objects/Opportunity_Outcome__c/fields/Deregistration_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deregistration_Reason__c</fullName>
    <description>The Reason the Start-Up Company was de-registered.</description>
    <label>Deregistration Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>