src/core-crm/objects/Opportunity_Outcome__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Project end date.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>