src/core-crm/objects/Opportunity_Outcome__c/fields/Finance_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Finance_Account_Code__c</fullName>
    <description>The GL Account Code that relates to/is being used to support the Project financials.</description>
    <inlineHelpText>The GL Account Code that relates to/is being used to support the Project financials.</inlineHelpText>
    <label>Finance Account Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>