src/core-crm/objects/Opportunity_Outcome__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to associated Opportunity.</description>
    <inlineHelpText>Lookup to associated Opportunity.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Outcomes</relationshipLabel>
    <relationshipName>Opportunity_Outcomes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>