src/core-crm/objects/Opportunity_Outcome__c/fields/Outcome_Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Effective_End_Date__c</fullName>
    <description>The date the agreed outcome is no longer in effect.</description>
    <inlineHelpText>Effective end date of the outcome.</inlineHelpText>
    <label>Outcome Effective End Date</label>
    <type>Date</type>
</CustomField>