src/core-crm/objects/Opportunity_Outcome__c/fields/Outcome_Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Effective_Start_Date__c</fullName>
    <description>The date the agreed outcome will become effective.</description>
    <inlineHelpText>Effective start date of the outcome.</inlineHelpText>
    <label>Outcome Effective Start Date</label>
    <type>Date</type>
</CustomField>