src/core-crm/objects/Opportunity_Outcome__c/fields/Outcome_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Identifies if the outcome has been formally agreed to and written into the finalised contract.</description>
    <inlineHelpText>Identifies if the outcome has been formally agreed to and written into the finalised contract.</inlineHelpText>
    <label>Outcome Is Active</label>
    <type>Checkbox</type>
</CustomField>