src/core-crm/objects/Opportunity_Outcome__c/fields/Outcome_Non_Tangible_Value__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Non_Tangible_Value__c</fullName>
    <description>Quantifies the business value of the agreed outcome. Expressed as a non-monetary value.</description>
    <inlineHelpText>The non-monetary benefit or value to QUT from the outcome.</inlineHelpText>
    <label>Outcome Non-Tangible Value</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>