src/core-crm/objects/Opportunity_Outcome__c/fields/Outcome_QUT_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Outcome_QUT_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The QUT staff member who is coordinating the specific outcome described in the partnership agreement.</description>
    <label>Outcome QUT Coordinator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Person</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Outcomes</relationshipLabel>
    <relationshipName>Opportunity_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>