src/core-crm/objects/Opportunity_Outcome__c/fields/Outcome_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Service_Type__c</fullName>
    <description>Indicates whether the service being exchanged is being received by QUT (inward) or being provided by QUT (outward).</description>
    <inlineHelpText>Reflects whether QUT is receiving the agreed outcome (inward) or providing the agreed outcome (outward).</inlineHelpText>
    <label>Outcome Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted> 
        <valueSetDefinition>
            <value>
                <fullName>Inward</fullName>
            </value>
            <value>
                <fullName>Outward</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>