src/core-crm/objects/Opportunity_Outcome__c/fields/Outcome_Summary__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Summary__c</fullName>
    <description>A summary of the specifics of the partnership outcome.</description>
    <inlineHelpText>Description of the Opportunity Outcome.</inlineHelpText>
    <label>Outcome Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>