src/core-crm/objects/Opportunity_Outcome__c/fields/Outcome_Tangible_Value__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Tangible_Value__c</fullName>
    <description>Quantifies the business value of the partnership outcome expressed in monetary terms (i.e. dollar-value).</description>
    <inlineHelpText>The monetary benefit or value to QUT from of the outcome.</inlineHelpText>
    <label>Outcome Tangible Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>