src/core-crm/objects/Opportunity_Outcome__c/fields/Outcome_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Total_Value__c</fullName>
    <description>Sum of the amount for each ‘Outcome Tangible Value’</description>
    <label>Outcome Total Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>