src/core-crm/objects/Opportunity_Outcome__c/fields/Outcome_Type__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Type__c</fullName>
    <description>Identifies the different specific outcome of the Corporate Partnership agreement.</description>
    <inlineHelpText>Select the type of outcome that has been agreed in the contract.</inlineHelpText>
    <label>Outcome Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>CPE</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>WIL Scholarship</fullName>
            </value>
            <value>
                <fullName>WIL (Non-Scholarship)</fullName>
            </value>
            <value>
                <fullName>Venue</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>