src/core-crm/objects/Opportunity_Outcome__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <description>The business entered name/title for the Project Opportunity Outcome. The field value has a business defined format.</description>
    <inlineHelpText>Field value to be copied from associated Opportunity, with the exception of the 1st three characters.</inlineHelpText>
    <label>Project Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>