src/core-crm/objects/Opportunity_Outcome__c/fields/Project_Summary__c.field-meta.xml
<CustomField>
    <fullName>Project_Summary__c</fullName>
    <description>Summary/description of the Project.</description>
    <label>Project Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>