src/core-crm/objects/Opportunity_Outcome__c/fields/Pure_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Pure_Project_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to associated Pure Project record.</description>
    <inlineHelpText>Lookup to associated Pure Project record.</inlineHelpText>
    <label>Pure Project ID</label>
    <referenceTo>Pure_Project__c</referenceTo>
    <relationshipLabel>Opportunity Outcomes</relationshipLabel>
    <relationshipName>Opportunity_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>