src/core-crm/objects/Opportunity_Outcome__c/fields/QUT_Shares_Held__c.field-meta.xml
<CustomField>
    <fullName>QUT_Shares_Held__c</fullName>
    <description>The number of shares QUT holds in the Startup company.</description>
    <inlineHelpText>The number of shares QUT holds in the Start Up company.</inlineHelpText>
    <label>QUT Shares Held</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>