src/core-crm/objects/Opportunity_Outcome__c/fields/Research_Commercialisation_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Research_Commercialisation_Project_Type__c</fullName>
    <description>The type of project for a Research Partnership Opportunity Outcome.</description>
    <label>Research Commercialisation Project Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Licence</fullName>
            </value>
            <value>
                <fullName>Options</fullName>
            </value>
            <value>
                <fullName>Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>