src/core-crm/objects/Opportunity_Outcome__c/fields/Research_Partnership_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Research_Partnership_Project_Type__c</fullName>
    <description>The type of project for a Research Partnership Opportunity Outcome.</description>
    <label>Research Partnership Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Commercial Research</fullName>
            </value>
            <value>
                <fullName>Consultancy</fullName>
            </value>
            <value>
                <fullName>Multifaceted Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>