src/core-crm/objects/Opportunity_Outcome__c/fields/Revenue_From_Sale__c.field-meta.xml
<CustomField>
    <fullName>Revenue_From_Sale__c</fullName>
    <description>Amount of revenue of sale of Startup Company.</description>
    <inlineHelpText>Amount of revenue of sale of Startup Company.</inlineHelpText>
    <label>Revenue From Sale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>