src/core-crm/objects/Opportunity_Outcome__c/fields/Sold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sold_Reason__c</fullName>
    <description>Description about the circumstances of the Startup sale.</description>
    <inlineHelpText>The reason the Startup Company was sold.</inlineHelpText>
    <label>Sold Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>