src/core-crm/objects/Opportunity_Outcome__c/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <description>The business process stages that Opportunity Outcomes progress through.</description>
    <inlineHelpText>The business process stages that Opportunity Outcomes progress through.</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Deregistered</fullName>
            </value>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>