src/core-crm/objects/Opportunity_Outcome__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Project start date.</description>
    <inlineHelpText>Project start date.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>