src/core-crm/objects/Opportunity_Outcome__c/fields/Startup_ABN__c.field-meta.xml
<CustomField>
    <fullName>Startup_ABN__c</fullName>
    <description>The ABN of the Startup Company.</description>
    <inlineHelpText>The ABN of the Startup Company.</inlineHelpText>
    <label>Startup ABN</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>