src/core-crm/objects/Opportunity_Outcome__c/fields/Startup_Company_Description__c.field-meta.xml
<CustomField>
    <fullName>Startup_Company_Description__c</fullName>
    <description>Description of the Startup Company.</description>
    <inlineHelpText>Description of the Startup Company.</inlineHelpText>
    <label>Startup Company Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>