src/core-crm/objects/Opportunity_Outcome__c/fields/Startup_Summary__c.field-meta.xml
<CustomField>
    <fullName>Startup_Summary__c</fullName>
    <description>Summary/description of the Startup company.</description>
    <inlineHelpText>Summary/description of the Startup company.</inlineHelpText>
    <label>Startup Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>