src/core-crm/objects/Opportunity_Outcome__c/fields/Sustainability_Transformation_Output__c.field-meta.xml
<CustomField>
    <fullName>Sustainability_Transformation_Output__c</fullName>
    <description>Allows business user to add commentary around the sustainability and transformational aspects of the International Projects Unit Project.</description>
    <inlineHelpText>Allows business user to add commentary around the sustainability and transformational aspects of the International Projects Unit Project.</inlineHelpText>
    <label>Sustainability and Transformation Output</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>