src/core-crm/objects/Opportunity_Outcome__c/fields/Total_Company_Shares_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Company_Shares_Available__c</fullName>
    <description>Total number of shares that are available to be purchased by investors.</description>
    <inlineHelpText>Total number of shares that are available to be purchased by investors.</inlineHelpText>
    <label>Total Company Shares Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>