src/core-crm/objects/Opportunity_Outcome__c/recordTypes/Corporate_Partnership.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Partnership</fullName>
    <active>true</active>
    <description>Create a Corporate Partnership Opportunity Outcome to capture the specific activities agreed as part of the corporate partnership contract.</description>
    <label>Corporate Partnership</label>
</RecordType>