src/core-crm/objects/Opportunity_Outcome__c/recordTypes/IPU_Project.recordType-meta.xml
<RecordType>
    <fullName>IPU_Project</fullName>
    <active>true</active>
    <description>Create and manage IPU Project.</description>
    <label>IPU Project</label>
</RecordType>