src/core-crm/objects/Opportunity_Outcome__c/recordTypes/Research_Commercialisation_Project.recordType-meta.xml
<RecordType>
    <fullName>Research_Commercialisation_Project</fullName>
    <active>true</active>
    <description>Create and manage Licence, Options and Assignment project.</description>
    <label>Research Commercialisation Project</label>
</RecordType>