src/core-crm/objects/Opportunity_Outcome__c/recordTypes/Research_Partnership_Project.recordType-meta.xml
<RecordType>
    <fullName>Research_Partnership_Project</fullName>
    <active>true</active>
    <description>Create and manage Research Partnership Project.</description>
    <label>Research Partnership Project</label>
</RecordType>