src/core-crm/objects/Opportunity_Outcome__c/recordTypes/Startup.recordType-meta.xml
<RecordType>
    <fullName>Startup</fullName>
    <active>true</active>
    <description>Create and manage a Startup Company.</description>
    <label>Startup</label>
</RecordType>