src/core-crm/objects/Opportunity_Outcome__c/validationRules/Decommissioned_Reason_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Decommissioned_Reason_is_Required</fullName>
    <active>true</active>
    <description>Decommissioned reason is required to update Decommission Date</description>
    <errorConditionFormula>AND (
ISCHANGED(   Decommissioned_Date__c ),
ISBLANK(  Decommissioned_Reason__c )
)</errorConditionFormula>
    <errorDisplayField>Decommissioned_Reason__c</errorDisplayField>
    <errorMessage>Mandatory field</errorMessage>
</ValidationRule>