src/core-crm/objects/Opportunity_Outcome__c/validationRules/Opportunity_Outcome_Lock_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Outcome_Lock_End_Date</fullName>
    <active>true</active>
    <description>Restrict editing for End Date once Decommission details are populated</description>
    <errorConditionFormula>AND( 
ISCHANGED( End_Date__c ) ,
ISBLANK( PRIORVALUE(End_Date__c ) )  ,
NOT( ISBLANK( Decommissioned_Date__c ) ), 
NOT( ISBLANK( Decommissioned_Reason__c ) ))</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>You cannot edit the End Date once Decommission details are populated.</errorMessage>
</ValidationRule>