src/core-crm/objects/Opportunity_Outcome__c/validationRules/Opportunity_Outcome_Lock_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Outcome_Lock_Opportunity</fullName>
    <active>true</active>
    <description>Restrict to update field</description>
    <errorConditionFormula>AND( ISCHANGED(   Opportunity__c ),  OR(ISPICKVAL( Stage_Name__c , &quot;Completed&quot;),ISPICKVAL( Stage_Name__c , &quot;Decommissioned&quot;)))</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>This record is already locked.</errorMessage>
</ValidationRule>