src/core-crm/objects/Opportunity_Outcome__c/validationRules/Startup_Deregistration_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Startup_Deregistration_Date_is_Required</fullName>
    <active>true</active>
    <description>Deregistration Date is required to update stage to Deregistered</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Startup&quot;,
    ISPICKVAL(  Stage_Name__c  , &quot;Deregistered&quot;),
    ISCHANGED( Stage_Name__c ) ,
    ISBLANK(    Deregistration_Date__c    )
)</errorConditionFormula>
    <errorDisplayField>Deregistration_Date__c</errorDisplayField>
    <errorMessage>Mandatory field</errorMessage>
</ValidationRule>