src/core-crm/objects/Opportunity_Outcome__c/validationRules/Startup_Revenue_from_Sale_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Startup_Revenue_from_Sale_is_Required</fullName>
    <active>true</active>
    <description>Revenue from Sale is required to update stage to Sold</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Startup&quot;,
    ISPICKVAL(  Stage_Name__c  , &quot;Sold&quot;),
    ISCHANGED( Stage_Name__c ) ,
    ISBLANK( Revenue_From_Sale__c )
)</errorConditionFormula>
    <errorDisplayField>Revenue_From_Sale__c</errorDisplayField>
    <errorMessage>Mandatory field</errorMessage>
</ValidationRule>