src/core-crm/objects/Opportunity_Outcome__c/validationRules/Startup_Sold_Reason_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Startup_Sold_Reason_is_Required</fullName>
    <active>true</active>
    <description>Sold Reason is required to update stage to Sold</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Startup&quot;,
    ISPICKVAL(  Stage_Name__c  , &quot;Sold&quot;),
    ISCHANGED( Stage_Name__c ) ,
    ISBLANK(  Sold_Reason__c  )
)</errorConditionFormula>
    <errorDisplayField>Sold_Reason__c</errorDisplayField>
    <errorMessage>Mandatory field</errorMessage>
</ValidationRule>