src/core-crm/objects/Opportunity_Outcome__c/listViews/All_Opportunity_Outcomes.listView-meta.xml
<ListView>
    <fullName>All_Opportunity_Outcomes</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Stage_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Opportunity Outcomes</label>
    <sharedTo>
        <group>Commercialisation_Operations_Manager</group>
        <group>Commercialisation_Partnership_Manager</group>
        <group>IPU_Operations_Manager</group>
        <group>IPU_Partnership_Manager</group>
        <group>Research_Operations_Manager</group>
        <group>Research_Partnership_Manager</group>
    </sharedTo>
</ListView>