src/core-crm/objects/Opportunity_Outcome__c/listViews/Commercialisation_Project_Outcome.listView-meta.xml
<ListView>
    <fullName>Commercialisation_Project_Outcome</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Stage_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity_Outcome__c.Research_Commercialisation_Project</value>
    </filters>
    <label>Commercialisation Project Outcome</label>
    <sharedTo>
        <group>Commercialisation_Operations_Manager</group>
        <group>Commercialisation_Partnership_Manager</group>
    </sharedTo>
</ListView>