src/core-crm/objects/Opportunity_Outcome__c/listViews/Research_Opportunity_Outcome.listView-meta.xml
<ListView>
    <fullName>Research_Opportunity_Outcome</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Stage_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity_Outcome__c.Research_Partnership_Project</value>
    </filters>
    <label>Research Opportunity Outcome</label>
    <sharedTo>
        <group>Research_Operations_Manager</group>
        <group>Research_Partnership_Manager</group>
    </sharedTo>
</ListView>